cargo modificaciones en con respecto a la tabla junto con sus Style

--- a/assets/css/pg4.css
+++ b/assets/css/pg4.css
@@ -5,9 +5,9 @@
     font-size: 20px;
     width: 770px;
 }
-tabla th, td, th{
-    border: 1px solid wheat;
-}
+   h tabla th, td, th{
+     hborder: 1px solid wheat;
+  }
 
 th,td {
     text-align: center;
@@ -18,3 +18,10 @@ th,td {
     margin-left: 650px;
 }
 
+.linea td {
+    text-decoration: overline;
+}
+
+.lin2 td{
+    text-decoration: overline;
+}
